Components: Implement highlight feature in Card component (#14564)
* Components: Add highlight feature to Card component

* Components: Add card highlight to component README and example

* Components: Add missing prop in Card README

* Components: Support for various highlights in Card component

* Components: Polish empty space in Card classNames

* Components: Use box-shadow instead of border for card highlight

--- a/client/components/card/style.scss
+++ b/client/components/card/style.scss
@@ -28,6 +28,22 @@
 	&.is-card-link {
 		padding-right: 48px;
 	}
+
+	&.is-error {
+		box-shadow: inset 3px 0 0 $alert-red;
+	}
+
+	&.is-info {
+		box-shadow: inset 3px 0 0 $blue-wordpress;
+	}
+
+	&.is-success {
+		box-shadow: inset 3px 0 0 $alert-green;
+	}
+
+	&.is-warning {
+		box-shadow: inset 3px 0 0 $alert-yellow;
+	}
 }
 
 // Clickable Card
