add margin-left to edit footer credit button

--- a/client/my-sites/site-settings/style.scss
+++ b/client/my-sites/site-settings/style.scss
@@ -288,6 +288,7 @@
 .site-settings__footer-credit-change {
 	width: 175px;
 	text-align:center;
+	margin-left: 12px;
 }
 
 .site-settings__footer-credit-explanation {
