WooCommerce: Add variation image management (#14597)
* Adds variation image management so that a product image can be set for each variation.

* file picker on desktop

* Fix placeholder that displays for variations when site/siteId hasn't been loaded yet.
Makes images properly square.

* variation image / picker dimensions and styling

* variation thumb border / position

* Fix children/variation image uploader logic so we can pass in empty contents and still get the correct behavior.

* Spacing fix for css

--- a/client/extensions/woocommerce/app/products/product-form.scss
+++ b/client/extensions/woocommerce/app/products/product-form.scss
@@ -384,19 +384,95 @@
 	min-width: 75px;
 }
 
-/* TODO: remove placeholder styles once implemented */
 .products__product-form-variation-image {
-	background: $gray-light;
-	height: 40px;
-	width: 40px;
-	margin-bottom: 16px;
+	margin-bottom: 0;
 	margin-right: 0px;
 	flex-shrink: 0;
+	position: relative;
+
+	.product-image-uploader__picker.compact {
+		height: 40px;
+		width: 40px;
+		margin-bottom: 0;
+		margin-right: 0;
+		margin-left: 0;
+
+		.file-picker {
+			height: 42px;
+		}
+	}
+
+	&:hover {
+		cursor: pointer;
+	}
+
+	.products__product-form-variation-image-remove {
+		position: absolute;
+		top: 0;
+		right: 0;
+		width: 14px;
+		height: 14px;
+		transform: translate( 33%, -33% );
+		border: 1px solid lighten( $gray, 10% );
+		border-radius: 50%;
+		background-color: $gray-light;
+		cursor: pointer;
+	}
+
+	.products__product-form-variation-image-remove-icon.gridicon {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate( -50%, -50% );
+		width: 12px;
+		height: 12px;
+		margin: 0;
+		color: lighten( $gray, 10% );
+	}
+
+	&:not(.uploader) {
+		border: 1px solid lighten( $gray, 30% );
+	}
+
+	figure {
+		width: 40px;
+		height: 40px;
+		overflow: hidden;
+
+		img {
+			position: absolute;
+			left: 50%;
+			top: 50%;
+			height: 100%;
+			width: auto;
+			transform: translate( -50%,-50% );
+		}
+	}
+
+	.products__product-form-variation-image.preview figure::after {
+		position: absolute;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		left: 0;
+	}
+
+	.products__product-form-variation-image.preview img {
+		opacity: 0.7;
+	}
+
+	.spinner {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate( -50%, -50% );
+	}
 }
 
-.products__product-form-variation-table-wrapper .products__product-form-variation-image{
+.products__product-form-variation-table-wrapper .products__product-form-variation-image {
 	margin-bottom: 0;
-	margin-right: 8px;
+	margin-right: 12px;
+	max-height: 42px;
 }
 
 .products__product-form-variation-all-row .products__product-id {
@@ -406,8 +482,8 @@
 .products__product-name-thumb {
 	display: inline-flex;
 	flex-direction: row;
-	max-width: 120px;
 	align-items: center;
+	transform: translateY( 2px );
 }
 
 .products__product-name {
