Update confirmation sidebar ground control (#14776)
* Make both Publish buttons non-compact, non-text-transformed.

• the two buttons should have the same size and overlap so that publishing can be done by touching/clicking over the same area
• uppercase is not desirable on a button that leads to confirmation

* Use a cross to close the sidebar.

* Fix IE10/11 layout issue.

https://stackoverflow.com/questions/37534254/flex-auto-margin-not-working-in-ie10-11

* Remove unnecessary css attribute.

* Update button label based on the date of the post.

* Wire up the post date change to the state tree.

* Handle all publish button status.

* Remove unused method.

* Update padding for better ground-control alignment.

* Fix cross and Publish button not being aligned.

--- a/client/post-editor/editor-confirmation-sidebar/style.scss
+++ b/client/post-editor/editor-confirmation-sidebar/style.scss
@@ -71,20 +71,18 @@
 .editor-confirmation-sidebar__ground-control {
 	@extend .card;
 	display: flex;
-	justify-content: space-between;
 	flex-direction: row;
 	flex-wrap: wrap;
 	position: relative;
 		top: 0;
 		left: 0;
 		right: 0;
-	padding: 9px 24px;
+	padding: 0 24px;
 	width: 100%;
 }
 
-.editor-confirmation-sidebar__cancel {
-	flex-grow: 1;
-	color: $alert-red;
+.editor-confirmation-sidebar__close {
+  margin-right: auto;
 }
 
 .editor-confirmation-sidebar__action .button {
@@ -92,9 +90,8 @@
 	border-color: darken( $alert-green, 20% );
 	color: $white;
 
-	text-transform: none;
 	padding: 7px 22px;
-	margin-left: 12px;
+	margin: 4px 0 4px 12px;
 
 	&:hover,
 	&:focus {
