--- a/client/reader/search-stream/style.scss
+++ b/client/reader/search-stream/style.scss
@@ -274,60 +274,6 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 	}
 }
 
-// Posts and Sites SectionNav
-.search-stream .section-nav {
-	background: inherit;
-	border-bottom: 2px solid lighten( $gray, 30% );
-	box-shadow: none;
-	margin-bottom: 0;
-	padding-bottom: 0;
-}
-
-.search-stream .section-nav-group {
-	display: flex;
-	flex: 1 0 auto;
-	width: 0;
-
-	@include breakpoint( "<480px" ) {
-		margin-top: 0;
-	}
-}
-
-.search-stream .section-nav-tabs__dropdown,
-.search-stream .section-nav__mobile-header {
-	display: none;
-}
-
-.search-stream .section-nav-tabs__list {
-	display: flex;
-
-	.section-nav-tab.is-selected {
-		border-bottom: 2px solid $gray-dark;
-	}
-
-	.section-nav-tab__link {
-		background-color: transparent;
-		color: $blue-wordpress;
-		padding: 16px;
-
-		&:hover {
-			color: $blue-medium;
-		}
-	}
-
-	.is-selected .section-nav-tab__link {
-		color: $gray-dark;
-	}
-}
-
-.search-stream .section-nav-tab__text {
-	font-weight: 600;
-	font-size: 13px;
-	letter-spacing: .04em;
-	text-transform: uppercase;
-	width: 100%;
-}
-
 // Search stream Posts and Sites header
 .search-stream__header .section-nav {
 	background: inherit;
@@ -339,7 +285,7 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 
 .search-stream__header .section-nav-group {
 	display: flex;
-	flex: 1 0 auto;
+	flex: 1 0 0%;
 	width: 0;
 
 	@include breakpoint( "<480px" ) {
@@ -403,37 +349,4 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 	border-bottom: 2px solid lighten( $gray, 30% );
 	padding-bottom: 10px;
 	width: 100%;
-}
-
-// Site Results options
-.search-stream .reader-subscription-list-item__options {
-	align-items: flex-end;
-	display: flex;
-	flex-direction: column;
-	position: absolute;
-		right: 15px;
-
-	@include breakpoint( ">660px" ) {
-		right: 0;
-	}
-
-	.gridicons-cog {
-		@include breakpoint( ">660px" ) {
-			left: -2px;
-		}
-
-		@media #{$reader-post-card-breakpoint} {
-			top: 15px;
-		}
-	}
-}
-
-.search-stream .reader-subscription-list-item__byline {
-	flex: none;
-	margin-right: 0;
-	width: calc( 100% - 70px );
-
-	.reader-subscription-list-item__site-title::after {
-		width: 10%;
-	}
 }
