--- a/client/components/web-preview/style.scss
+++ b/client/components/web-preview/style.scss
@@ -96,11 +96,8 @@
 }
 
 .web-preview__close,
-.web-preview__external,
-.web-preview__device-button,
-.web-preview__seo-button {
+a.web-preview__external {
 	color: $gray;
-	border-right: 1px solid lighten( $gray, 20% );
 	padding: 12px 16px;
 
 	cursor: pointer;
@@ -122,11 +119,13 @@
 .web-preview__external {
 	display: flex;
 	align-items: center;
+	margin-left: auto;
 }
 
 .web-preview__device-switcher {
 	display: flex;
-	margin-left: 8px;
+	margin: 6px 0 0 8px;
+	width: 200px;
 }
 
 .web-preview__device-button {
@@ -176,6 +175,7 @@
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: flex-end;
+	display: none;
 
 	.button {
 		margin: 4px;
@@ -192,7 +192,7 @@
 	width: 100%;
 	height: 100%;
 	opacity: 0;
-	transition: opacity 0.2s ease-in-out, max-width 0.2s ease-out;
+	transition: opacity 0.2s ease-in-out;
 	margin: 0 auto;
 
 	.is-loaded & {
@@ -252,4 +252,5 @@
 	text-align: center;
 	display: block;
 	margin: 48px 0;
+	height: 100%;
 }
