Reader: Site Result in Search (#13198)
* Reader: Add site results to the search results

props @jancavan @samouri

* finalize rebase

* rebase mistake -- needed to pick searchType properly

* Reader: Wrap site meta info around Follow button

* Fix long-content-fade

* disable eslint

* Fix posts and sites columns

* Remove duplicate blocks, fix flex to work in IE

* Add margin top to suggestions, remove max-width from post results

* Remove max-width from post results

* delete unusued bits

* added is-two-column and with-sites

* fix padding-top for old search withoutsites

* padding/margin tops

--- a/client/reader/search-stream/style.scss
+++ b/client/reader/search-stream/style.scss
@@ -1,3 +1,7 @@
+.is-reader-page .main.search-stream {
+	max-width: 960px;
+}
+
 .search-stream__intro {
 
 	@include breakpoint( "<660px" ) {
@@ -15,8 +19,7 @@
 	background: lighten( $gray, 20% );
 }
 
-.is-reader-page .search-stream .reader-post-card.card,
-.is-reader-page .search-stream .reader-combined-card.card {
+.is-reader-page .search-stream .reader-post-card.card {
 	width: 100%;
 }
 
@@ -33,23 +36,50 @@
 	}
 }
 
-// Custom breakpoints needed to match Related Posts
-$reader-related-card-v2-breakpoint-medium: "( min-width: 661px ) and ( max-width: 730px )";
-$reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
-
-// Recommendations in Search
-.is-reader-page .search-stream .reader__content {
-	display: flex;
-	flex-flow: wrap;
-	margin-top: 100px;
+// fix for smaller breakpoint on the new site-search
+.is-reader-page .search-stream__with-sites .search-stream__fixed-area {
+	padding-top: 20px;
 
 	@include breakpoint( ">660px" ) {
-		margin-top: 133px;
+		padding-top: 77px;
 	}
 }
 
-.is-reader-page .search-stream__blank-suggestions {
-	 margin-bottom: -15px;
+.search-stream__input-card.card {
+	margin-bottom: 16px;
+	padding: 0;
+	z-index: z-index( 'root', '.search-stream__input-card' );
+}
+
+// Search term suggestions
+.search-stream__blank-suggestions {
+	font-size: 13px;
+	color: $gray;
+	margin-top: 18px;
+	text-align:left;
+
+	a, a:visited {
+		color: $blue-medium;
+	}
+
+	a:hover {
+		color: $blue-light;
+	}
+
+	@include breakpoint( "<660px" ) {
+		padding-left: 16px;
+	}
+}
+
+// Custom breakpoints needed to match Related Posts
+$reader-post-card-breakpoint: "( min-width: 1012px )";
+$reader-related-card-v2-breakpoint-medium: "( min-width: 661px ) and ( max-width: 730px )";
+$reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
+
+// Post recommendations in Search
+.is-reader-page .search-stream .reader__content {
+	display: flex;
+	flex-flow: wrap;
 }
 
 .is-reader-page .search-stream__recommendation-list-item {
@@ -75,7 +105,7 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 		margin: 0 15px 0;
 	}
 
-	&:nth-child( 2n+0 ) {
+	&:nth-child( 2n ) {
 		flex-basis: calc( 50% - 15px );
 		margin: 0 15px 0 0;
 
@@ -169,36 +199,14 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 	}
 }
 
-.search-stream__input-card.card {
-	box-shadow: 0 0 0 2px lighten( $gray, 20% ), 0 1px 2px lighten( $gray, 20% );
-	margin-bottom: 16px;
-	padding: 0;
-	z-index: z-index( 'root', '.search-stream__input-card' );
-}
+.is-reader-page .search-stream__input-card.card {
+	box-shadow: 0 0 0 2px lighten( $gray, 20% ), 0 1px 2px lighten( $gray, 30% );
+	margin-bottom: 0px;
+ }
 
-.search-stream__blank {
-	margin-top: 0;
-	text-align:center;
-}
-
-.search-stream__blank-suggestions {
-	font-size: 13px;
-	color: $gray;
-	margin-top: 0;
-	text-align:left;
-
-	a, a:visited {
-		color: $blue-medium;
-	}
-
-	a:hover {
-		color: $blue-light;
-	}
-
-	@include breakpoint( "<660px" ) {
-		padding-left: 16px;
-	}
-}
+ .is-reader-page .search-stream__blank-suggestions {
+	 margin-bottom: -15px;
+ }
 
 .card.reader-search-card {
 
@@ -217,8 +225,51 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 	z-index: z-index( 'root', '.search-stream__sort-picker' );
 }
 
-// search-stream-header
-// Posts and Sites SectionNav
+// Post and Site results
+.search-stream .search-stream__results {
+	display: flex;
+}
+
+.search-stream__headers {
+	color: $gray;
+	display: flex;
+	font-weight: 600;
+	letter-spacing: .1em;
+	list-style-type: none;
+	margin: 0;
+	padding-top: 20px;
+	text-transform: uppercase;
+}
+
+.search-stream .search-stream__site-header {
+	margin-left: 40px;
+	max-width: 265px;
+	width: 100%;
+}
+
+.search-stream .search-stream__post-header,
+.search-stream .search-stream__site-header {
+	border-bottom: 2px solid lighten( $gray, 30% );
+	padding-bottom: 10px;
+	width: 100%;
+}
+
+.search-stream .search-stream__site-results {
+	max-width: 265px;
+	min-width: 265px;
+	margin-left: 40px;
+
+	.reader-infinite-stream__row-wrapper {
+		border: 0;
+	}
+
+	.reader-subscription-list-item .follow-button__label,
+	.reader-subscription-list-item__settings-label {
+		display: none;
+	}
+}
+
+// Search stream Posts and Sites header
 .search-stream__header .section-nav {
 	background: inherit;
 	border-bottom: 2px solid lighten( $gray, 30% );
@@ -229,7 +280,7 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 
 .search-stream__header .section-nav-group {
 	display: flex;
-	flex: 1 0 auto;
+	flex: 1 0 0%;
 	width: 0;
 
 	@include breakpoint( "<480px" ) {
@@ -286,6 +337,22 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 	margin-left: 40px;
 	max-width: 265px;
 	width: 100%;
+}
+// TODO: remove this after site on search lands
+.following.search-stream.main .reader__content {
+	padding-top: 105px;
+}
+
+.search-stream__with-sites .search-stream__results {
+	padding-top: 83px;
+
+	&.is-two-columns {
+		padding-top: 135px;
+	}
+}
+
+.search-stream__single-column-results  {
+	padding-top: 120px;
 }
 
 .search-stream__post-header,
