Signup: update illustrations for NUX flow.
Note: This commit adds control flows and/or props to some shared components
to isolate the changes from other flows.

See p5uIfZ-664-p2

--- a/client/components/purchase-detail/style.scss
+++ b/client/components/purchase-detail/style.scss
@@ -52,6 +52,28 @@
 			}
 		}
 	}
+
+	&.with-svg-icon {
+		.purchase-detail__content {
+			@include breakpoint( ">660px" ) {
+				padding-right: 220px;
+			}
+		}
+
+		.purchase-detail__icon {
+			background: transparent;
+			width: 150px;
+			height: auto;
+			margin-top: 0;
+			transform: translate( 0, -50% );
+			padding: 0;
+
+			@include breakpoint( "<660px" ) {
+				width: 128px;
+				margin-top: 0;
+			}
+		}
+	}
 }
 
 .purchase-detail__content {
