--- a/client/signup/steps/design-type/style.scss
+++ b/client/signup/steps/design-type/style.scss
@@ -42,7 +42,15 @@
 
 	@at-root #{&}-image {
 		display: block;
+		position: relative;
 		width: 100%;
+		padding-top: 90%;
+		svg {
+			position: absolute;
+			top: 9%;
+			left: 8%;
+			width: 90%;
+		}
 	}
 }
 
