--- a/client/signup/steps/design-type-with-store/style.scss
+++ b/client/signup/steps/design-type-with-store/style.scss
@@ -46,7 +46,7 @@
 	border: 1px solid lighten( $gray, 20% );
 	border-bottom: 0;
 	margin: 0 10px;
-	
+
 	@include breakpoint( "<480px" ) {
 		box-shadow: none; //inherited from .card, remove for mobile only
 	}
@@ -130,9 +130,19 @@
 
 .design-type-with-store__image {
 	display: none;
+	position: relative;
+	width: 100%;
+	padding-top: 90%;
 
 	@include breakpoint( ">480px" ) {
 		display: block;
+	}
+
+	svg {
+		position: absolute;
+		top: 9%;
+		left: 8%;
+		width: 90%;
 	}
 }
 
