Update paths to keep site at the end, add child items to settings nav

--- a/client/extensions/woocommerce/style.scss
+++ b/client/extensions/woocommerce/style.scss
@@ -57,4 +57,17 @@
 		display: inline-block;
 		flex-grow: 1;
 	}
+
+	li {
+		&.is-child-item {
+			a {
+				font-size: 12px;
+				padding: 8px 16px 8px 55px;
+			}
+
+			svg {
+				display: none;
+			}
+		}
+	}
 }
