Components: add icon support to SelectDropdown (#14617)
* Add support for Gridicon.
* Add `selectedIcon` `options.icon` props for dropdown header and dropdown item.
* Update styles to account for icon.
* Add dropdown with icon example to devdocs.
* Update documentation for new props.

--- a/client/components/select-dropdown/style.scss
+++ b/client/components/select-dropdown/style.scss
@@ -120,6 +120,15 @@ $compact-header-height: 35;
 		right: 40px;
 		top: #{ ( $header-height - 18 - 2 ) / 2 }px;
 	}
+
+	.gridicon {
+		margin-right: #{ ( $side-margin / 2 ) }px;
+		vertical-align: text-bottom;
+
+		.is-compact & {
+			display: none;
+		}
+	}
 }
 
 .select-dropdown__header-text {
@@ -215,6 +224,11 @@ $compact-header-height: 35;
 		&.is-selected:hover {
 			color: $white;
 		}
+	}
+
+	.gridicon {
+		margin-right: #{ ( $side-margin / 2 ) }px;
+		vertical-align: text-bottom;
 	}
 }
 
