--- a/client/post-editor/editor-confirmation-sidebar/style.scss
+++ b/client/post-editor/editor-confirmation-sidebar/style.scss
@@ -35,6 +35,13 @@
 	}
 }
 
+.editor-confirmation-sidebar__publishing-button {
+	position: absolute;
+		top: 53px;
+		right: 16px;
+		min-width: 142px;
+}
+
 .editor-confirmation-sidebar__sidebar {
 	@extend .sidebar;
 	width: 374px;
