Adds a TinyMCE component that allows us to show compact/basic rich editing areas. Implements it on the product form and variation modal.

--- a/client/extensions/woocommerce/app/products/product-form.scss
+++ b/client/extensions/woocommerce/app/products/product-form.scss
@@ -550,6 +550,11 @@
 		padding: 16px;
 		max-height: 80vh;
 		overflow-y: hidden;
+
+		.compact-tinymce {
+			padding: 16px;
+			margin-left: -136px;
+		}
 	}
 
 	h1 {
