--- a/client/extensions/woocommerce/style.scss
+++ b/client/extensions/woocommerce/style.scss
@@ -17,6 +17,7 @@
 	@import 'components/product-image-uploader/style';
 	@import 'app/settings/shipping/style';
 	@import 'components/list/style';
+	@import 'components/table/style';
 	@import 'app/dashboard/style';
 
 	.components__action-header {
