Create a table component for tabular data
WooCommerce components: First pass at merging two approaches to `<table>`

allow rowHeaders and various fixes

Remove `hasBorder` as a prop on Table

Switch to more compact rendering

add readme

--- a/client/extensions/woocommerce/style.scss
+++ b/client/extensions/woocommerce/style.scss
@@ -19,6 +19,7 @@
 	@import 'components/product-image-uploader/style';
 	@import 'app/settings/shipping/style';
 	@import 'components/list/style';
+	@import 'components/table/style';
 	@import 'app/dashboard/style';
 
 	.components__action-header {
