Reader: Use the Emojify component, instead of a custom emoji parser

--- a/client/components/emojify/style.scss
+++ b/client/components/emojify/style.scss
@@ -4,7 +4,7 @@
 
 // Styles recommended by twemoji
 // https://github.com/twitter/twemoji#inline-styles
-.emojify__emoji {
+img.emojify__emoji {
 	height: 1em;
 	width: 1em;
 	margin: 0 .05em 0 .1em;
