--- a/client/blocks/comment-detail/style.scss
+++ b/client/blocks/comment-detail/style.scss
@@ -6,7 +6,12 @@
 
 	&.is-expanded {
 		margin: 16px auto;
+
+		.comment-detail__header {
+			justify-content: space-between;
+		}
 	}
+
 	&:not( .is-expanded ):hover {
 		box-shadow: 0 0 0 1px $gray, 0 2px 4px lighten( $gray, 20% );
 		z-index: 1;
@@ -60,10 +65,16 @@
 	}
 }
 
+.comment-detail__author-info-element {
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
+
 .comment-detail__header {
+	align-items: center;
 	display: flex;
 	flex-flow: row nowrap;
-	justify-content: space-between;
 	padding: 12px 8px;
 
 	&.is-preview:not( .is-bulk-edit ) {
@@ -71,22 +82,15 @@
 	}
 
 	&.is-bulk-edit {
-		padding: 0;
 		.comment-detail__checkbox {
 			cursor: pointer;
-			padding: 12px 16px;
+			padding-left: 8px;
 			.form-checkbox {
-				margin-top: 4px;
+				margin: 0;
 			}
 		}
-		.comment-detail__author-info {
-			padding: 12px 0;
-		}
-		.comment-detail__author-avatar {
-			padding-left: 0;
-		}
-		.comment-detail__comment-preview {
-			padding: 12px 8px;
+		.comment-detail__author-preview {
+			padding: 0 12px;
 		}
 	}
 
@@ -94,21 +98,31 @@
 		border-bottom: 1px solid lighten( $gray, 30% );
 	}
 
-	.comment-detail__author-avatar {
-		display: inline-block;
-		height: 24px;
+	.comment-detail__author-preview {
+		box-sizing: border-box;
 		padding: 0 8px;
-		vertical-align: middle;
-		width: 24px;
+		width: 40%;
 	}
 }
 
 .comment-detail__comment-preview {
+	box-sizing: border-box;
+	line-height: 1.4;
+	max-height: 38px;
 	overflow: hidden;
 	padding: 0 8px;
-	text-overflow: ellipsis;
-	white-space: nowrap;
+	position: relative;
 	width: 60%;
+
+	&:after {
+		background: linear-gradient(to right, rgba( $white, 0 ), rgba( $white, 1 ) 50%);
+		bottom: 0;
+		content: '';
+		height: 19px;
+		position: absolute;
+		right: 0;
+		width: 30%;
+	}
 }
 
 .comment-detail__actions {
@@ -227,17 +241,6 @@
 
 .comment-detail__author {
 	padding: 16px 0;
-
-	.comment-detail__author-info {
-		overflow: hidden;
-		text-overflow: ellipsis;
-		white-space: nowrap;
-	}
-	.comment-detail__author-info-element {
-		overflow: hidden;
-		text-overflow: ellipsis;
-		white-space: nowrap;
-	}
 }
 
 .comment-detail__author-preview {
