Image placeholder width on mobile

--- a/client/extensions/woocommerce/app/products/product-form.scss
+++ b/client/extensions/woocommerce/app/products/product-form.scss
@@ -113,6 +113,7 @@
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: center;
+		width: 100%;
 
 		@include breakpoint( ">960px" ) {
 			justify-content: flex-start;
