--- a/client/my-sites/comments/style.scss
+++ b/client/my-sites/comments/style.scss
@@ -24,25 +24,27 @@
 	}
 }
 
+.comment-list__transition-wrapper {
+	position: relative;
+}
+
 .comment-list__transition-enter {
 	opacity: 0.01;
-	visibility: hidden;
+	position: absolute;
 
 	&.comment-list__transition-enter-active {
 		opacity: 1;
-		visibility: visible;
-		transition: all .15s linear;
+		transition: opacity .15s linear;
 		transition-delay: .15s;
 	}
 }
 
 .comment-list__transition-leave {
 	opacity: 1;
-	visibility: visible;
+	position: absolute;
 
 	&.comment-list__transition-leave-active {
 		opacity: 0.01;
-		visibility: hidden;
-		transition: all 0.15s linear;
+		transition: opacity 0.15s linear;
 	}
 }
