--- a/client/my-sites/comments/style.scss
+++ b/client/my-sites/comments/style.scss
@@ -1,5 +1,41 @@
+.comment-navigation {
+	@include breakpoint( "<480px" ) {
+		.section-nav__mobile-header:after {
+			padding-left: 8px;
+		}
+		.section-nav__mobile-header-text {
+			flex: none;
+			width: auto;
+		}
+
+		.comment-navigation__open-bulk {
+			padding-top: 9px;
+			position: absolute;
+			right: 0;
+			top: 0;
+		}
+	}
+}
+
 .comment-navigation.is-bulk-edit {
 	padding-right: 0;
+
+	@include breakpoint( "<480px" ) {
+		.section-nav__mobile-header {
+			display: none;
+		}
+
+		.comment-navigation__bulk-count {
+			width: calc( 100% - 70px );
+		}
+
+		.comment-navigation__close-bulk {
+			position: absolute;
+			right: 0;
+			top: 3px;
+			width: 55px;
+		}
+	}
 }
 
 .comment-navigation__tab {
