Move featured toggle from the main details card to the category card.

--- a/client/extensions/woocommerce/app/products/product-form.scss
+++ b/client/extensions/woocommerce/app/products/product-form.scss
@@ -25,7 +25,9 @@
 	flex: inherit;
 }
 
-.products__product-form-details-featured {
+.products__product-form-featured {
+	margin-bottom: 16px;
+
 	.form-toggle__label {
 		font-weight: 400;
 	}
