--- a/client/reader/search-stream/style.scss
+++ b/client/reader/search-stream/style.scss
@@ -74,10 +74,10 @@
 // Post recs
 .search-stream.search-stream__with-sites .search-stream__recommendation-list-item:nth-child(2),
 .search-stream.search-stream__with-sites .search-stream__recommendation-list-item:nth-child(3) {
-	margin-top: 90px;
+	margin-top: 70px;
 
-	@include breakpoint( "<660px" ) {
-		margin-top: 70px;
+	@include breakpoint( ">660px" ) {
+		margin-top: 90px;
 	}
 }
 
@@ -282,44 +282,29 @@ $reader-post-card-breakpoint-small: "( max-width: 550px )";
 	display: flex;
 }
 
-// Post and Sites static headers
+// Posts and Sites static headers
 .search-stream__headers {
 	color: $gray;
+	font-size: 14px;
 	display: flex;
 	font-weight: 600;
-	letter-spacing: .1em;
 	list-style-type: none;
 	margin: 0;
 	padding-top: 20px;
 	text-transform: uppercase;
 }
 
-.search-stream .search-stream__site-header {
+.search-stream__site-header {
 	margin-left: 40px;
 	max-width: 265px;
 	width: 100%;
 }
 
-.search-stream .search-stream__post-header,
-.search-stream .search-stream__site-header {
-	border-bottom: 2px solid lighten( $gray, 30% );
+.search-stream__post-header,
+.search-stream__site-header {
+	border-bottom: 1px solid lighten( $gray, 30% );
 	padding-bottom: 10px;
 	width: 100%;
-}
-
-.search-stream .search-stream__site-results {
-	max-width: 265px;
-	min-width: 265px;
-	margin-left: 40px;
-
-	.reader-infinite-stream__row-wrapper {
-		border: 0;
-	}
-
-	.reader-subscription-list-item .follow-button__label,
-	.reader-subscription-list-item__settings-label {
-		display: none;
-	}
 }
 
 // Posts and Sites tabbed headers
