--- a/client/components/web-preview/style.scss
+++ b/client/components/web-preview/style.scss
@@ -38,6 +38,8 @@
 }
 
 .web-preview__content {
+	display: flex;
+	flex-direction: column;
 	box-shadow: 0 0 0 1px rgba( $gray, 0.5 );
 	background: $gray-light;
 	border-radius: 4px 4px 0 0;
@@ -94,11 +96,8 @@
 }
 
 .web-preview__close,
-.web-preview__external,
-.web-preview__device-button,
-.web-preview__seo-button {
+a.web-preview__external {
 	color: $gray;
-	border-right: 1px solid lighten( $gray, 20% );
 	padding: 12px 16px;
 
 	cursor: pointer;
@@ -120,11 +119,13 @@
 .web-preview__external {
 	display: flex;
 	align-items: center;
+	margin-left: auto;
 }
 
 .web-preview__device-switcher {
 	display: flex;
-	margin-left: 8px;
+	margin: 6px 0 0 8px;
+	width: 200px;
 }
 
 .web-preview__device-button {
@@ -174,6 +175,7 @@
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: flex-end;
+	display: none;
 
 	.button {
 		margin: 4px;
@@ -191,19 +193,47 @@
 	height: 100%;
 	opacity: 0;
 	transition: opacity 0.2s ease-in-out;
+	margin: 0 auto;
 
 	.is-loaded & {
 		opacity: 1;
 	}
 }
 
-.web-preview__placeholder {
-	width: 100%;
+.web-preview__frame-wrapper {
 	position: absolute;
-		top: 49px;
-		bottom: 0;
+		top: 0;
+		left: 0;
+	height: 100%;
+	width: 100%;
+
+	&.is-resizable {
+		background: $gray-light;
+
+		.web-preview__frame {
+			.is-tablet & {
+				max-width: 783px;
+			}
+
+			.is-phone & {
+				max-width: 460px;
+			}
+		}
+	}
+}
+
+.web-preview__placeholder {
+	position: relative;
+	width: 100%;
 	overflow-y: auto;
 	-webkit-overflow-scrolling: touch;
+	flex: 1;
+}
+
+.web-preview__inner {
+	height: 100%;
+	display: flex;
+	flex-direction: column;
 }
 
 .web-preview .spinner {
@@ -226,4 +256,5 @@
 	text-align: center;
 	display: block;
 	margin: 48px 0;
+	height: 100%;
 }
