show icon and update text styles for compact mode

--- a/client/components/select-dropdown/style.scss
+++ b/client/components/select-dropdown/style.scss
@@ -125,7 +125,8 @@ $compact-header-height: 35;
 		vertical-align: text-bottom;
 
 		.is-compact & {
-			display: none;
+			position: relative;
+			top: 2px;
 		}
 	}
 }
