--- a/assets/stylesheets/shared/functions/_z-index.scss
+++ b/assets/stylesheets/shared/functions/_z-index.scss
@@ -149,6 +149,7 @@ $z-layers: (
 		'.wplink__dialog.dialog.card': 100200,
 		'.web-preview': 100200,
 		'.design-menu.is-visible': 100201,
+		'.popover.gallery__order-popover': 100300,
 		'popover.is-dialog-visible': 100300,
 		'body .webui-popover': 100300,
 		'.fullscreen-fader': 200000,
