Updated Happiness Engineer illustration.

--- a/client/components/happiness-support/style.scss
+++ b/client/components/happiness-support/style.scss
@@ -55,6 +55,12 @@
 	font-size: 14px;
 }
 
+.happiness-support__icon {
+	float: right;
+	width: 150px;
+	margin-left: 30px;
+}
+
 .happiness-support__buttons {
 	clear: both;
 
