--- a/client/components/tinymce/plugins/media/style.scss
+++ b/client/components/tinymce/plugins/media/style.scss
@@ -1,10 +1,5 @@
 img.is-transient {
-	transform: translate3d(0,0,0);
-
-	animation: pulse-image 2.5s ease-in-out infinite;
-	opacity: 0.25;
-}
-
-@keyframes pulse-image {
-	50% { opacity: 0.5; }
+	/**
+		This class is applied to images that are currently uploaded to the media library from the TinyMCE editor
+	*/
 }
