Add line clamping to comment previews for browsers that support it

--- a/client/blocks/comment-detail/style.scss
+++ b/client/blocks/comment-detail/style.scss
@@ -123,6 +123,14 @@
 		right: 0;
 		width: 30%;
 	}
+	@supports( -webkit-line-clamp: 2 ) {
+		display: -webkit-box;
+		-webkit-box-orient: vertical;
+		-webkit-line-clamp: 2;
+		&:after {
+			background: transparent;
+		}
+	}
 }
 
 .comment-detail__actions {
