--- a/client/my-sites/comments/style.scss
+++ b/client/my-sites/comments/style.scss
@@ -1,5 +1,41 @@
+.comment-navigation {
+	@include breakpoint( "<480px" ) {
+		.section-nav__mobile-header:after {
+			padding-left: 8px;
+		}
+		.section-nav__mobile-header-text {
+			flex: none;
+			width: auto;
+		}
+
+		.comment-navigation__open-bulk {
+			padding-top: 9px;
+			position: absolute;
+			right: 0;
+			top: 0;
+		}
+	}
+}
+
 .comment-navigation.is-bulk-edit {
 	padding-right: 0;
+
+	@include breakpoint( "<480px" ) {
+		.section-nav__mobile-header {
+			display: none;
+		}
+
+		.comment-navigation__bulk-count {
+			width: calc( 100% - 70px );
+		}
+
+		.comment-navigation__close-bulk {
+			position: absolute;
+			right: 0;
+			top: 3px;
+			width: 55px;
+		}
+	}
 }
 
 .comment-navigation__tab {
@@ -24,25 +60,27 @@
 	}
 }
 
+.comment-list__transition-wrapper {
+	position: relative;
+}
+
 .comment-list__transition-enter {
 	opacity: 0.01;
-	visibility: hidden;
+	position: absolute;
 
 	&.comment-list__transition-enter-active {
 		opacity: 1;
-		visibility: visible;
-		transition: all .15s linear;
+		transition: opacity .15s linear;
 		transition-delay: .15s;
 	}
 }
 
 .comment-list__transition-leave {
 	opacity: 1;
-	visibility: visible;
+	position: absolute;
 
 	&.comment-list__transition-leave-active {
 		opacity: 0.01;
-		visibility: hidden;
-		transition: all 0.15s linear;
+		transition: opacity 0.15s linear;
 	}
 }
