WooCommerce: Make description fields TinyMCE editors (#14944)
* Adds a TinyMCE component that allows us to show compact/basic rich editing areas. Implements it on the product form and variation modal.

* mce icons: add calypso colors

* Some style fixes for mobile, and deal with feedback.

* format menu: align to edge of container

* Handle PR feedback from jb

--- a/client/extensions/woocommerce/app/products/product-form.scss
+++ b/client/extensions/woocommerce/app/products/product-form.scss
@@ -550,6 +550,12 @@
 		padding: 16px;
 		max-height: 80vh;
 		overflow-y: hidden;
+
+		.compact-tinymce {
+			padding: 16px;
+			padding-left: 0px;
+			max-width: 700px;
+		}
 	}
 
 	h1 {
